# Copyright (C) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/arkui/ace_engine/ace_config.gni")
import("//foundation/graphic/image_framework/ide/image_decode_config.gni")
import("//third_party/flutter/flutter_config.gni")

image_native_ios_cflags = [ "-DIMAGE_DEBUG_FLAG" ]

image_native_ios_sources = [
  # plugin_manager
  "$image_subsystem/plugins/manager/src/common/attr_data.cpp",
  "$image_subsystem/plugins/manager/src/common/platform_adp.cpp",
  "$image_subsystem/plugins/manager/src/framework/capability.cpp",
  "$image_subsystem/plugins/manager/src/framework/impl_class.cpp",
  "$image_subsystem/plugins/manager/src/framework/impl_class_key.cpp",
  "$image_subsystem/plugins/manager/src/framework/impl_class_mgr.cpp",
  "$image_subsystem/plugins/manager/src/framework/json_helper.cpp",
  "$image_subsystem/plugins/manager/src/framework/plugin.cpp",
  "$image_subsystem/plugins/manager/src/framework/plugin_export.cpp",
  "$image_subsystem/plugins/manager/src/framework/plugin_fw.cpp",
  "$image_subsystem/plugins/manager/src/framework/plugin_info_lock.cpp",
  "$image_subsystem/plugins/manager/src/framework/plugin_mgr.cpp",
  "$image_subsystem/plugins/manager/src/plugin_server.cpp",
  "$image_subsystem/plugins/manager/src/pluginbase/plugin_class_base.cpp",
  "$image_subsystem/plugins/manager/src/thirdpartyadp/gstreamer/gst_plugin_fw.cpp",

  # webp
  "//third_party/flutter/skia/third_party/externals/libjpeg-turbo/jdicc.c",

  # image_native
  "${image_subsystem}/frameworks/innerkitsimpl/common/src/memory_manager.cpp",
  "$image_subsystem/frameworks/innerkitsimpl/codec/src/image_packer.cpp",
  "$image_subsystem/frameworks/innerkitsimpl/codec/src/image_packer_ex.cpp",
  "$image_subsystem/frameworks/innerkitsimpl/codec/src/image_source.cpp",
  "$image_subsystem/frameworks/innerkitsimpl/common/src/incremental_pixel_map.cpp",
  "$image_subsystem/frameworks/innerkitsimpl/common/src/pixel_map.cpp",
  "$image_subsystem/frameworks/innerkitsimpl/common/src/pixel_map_parcel.cpp",
  "$image_subsystem/frameworks/innerkitsimpl/converter/src/basic_transformer.cpp",
  "$image_subsystem/frameworks/innerkitsimpl/converter/src/matrix.cpp",
  "$image_subsystem/frameworks/innerkitsimpl/converter/src/pixel_convert.cpp",
  "$image_subsystem/frameworks/innerkitsimpl/converter/src/post_proc.cpp",
  "$image_subsystem/frameworks/innerkitsimpl/converter/src/scan_line_filter.cpp",
  "$image_subsystem/frameworks/innerkitsimpl/creator/src/image_creator.cpp",
  "$image_subsystem/frameworks/innerkitsimpl/creator/src/image_creator_manager.cpp",
  "$image_subsystem/frameworks/innerkitsimpl/receiver/src/image_receiver.cpp",
  "$image_subsystem/frameworks/innerkitsimpl/receiver/src/image_receiver_manager.cpp",
  "$image_subsystem/frameworks/innerkitsimpl/stream/src/buffer_packer_stream.cpp",
  "$image_subsystem/frameworks/innerkitsimpl/stream/src/buffer_source_stream.cpp",
  "$image_subsystem/frameworks/innerkitsimpl/stream/src/file_packer_stream.cpp",
  "$image_subsystem/frameworks/innerkitsimpl/stream/src/file_source_stream.cpp",
  "$image_subsystem/frameworks/innerkitsimpl/stream/src/incremental_source_stream.cpp",
  "$image_subsystem/frameworks/innerkitsimpl/stream/src/istream_source_stream.cpp",
  "$image_subsystem/frameworks/innerkitsimpl/stream/src/ostream_packer_stream.cpp",

  # image_napi
  "$image_subsystem/frameworks/kits/js/common/image_napi_utils.cpp",
  "$image_subsystem/frameworks/kits/js/common/image_packer_napi.cpp",
  "$image_subsystem/frameworks/kits/js/common/image_source_napi.cpp",
  "$image_subsystem/frameworks/kits/js/common/native_module_ohos_image.cpp",
  "$image_subsystem/frameworks/kits/js/common/pixel_map_napi.cpp",

  # formatagent
  "$image_subsystem/plugins/common/libs/image/formatagentplugin/src/bmp_format_agent.cpp",
  "$image_subsystem/plugins/common/libs/image/formatagentplugin/src/gif_format_agent.cpp",
  "$image_subsystem/plugins/common/libs/image/formatagentplugin/src/heif_format_agent.cpp",
  "$image_subsystem/plugins/common/libs/image/formatagentplugin/src/jpeg_format_agent.cpp",
  "$image_subsystem/plugins/common/libs/image/formatagentplugin/src/png_format_agent.cpp",
  "$image_subsystem/plugins/common/libs/image/formatagentplugin/src/raw_format_agent.cpp",
  "$image_subsystem/plugins/common/libs/image/formatagentplugin/src/svg_format_agent.cpp",
  "$image_subsystem/plugins/common/libs/image/formatagentplugin/src/wbmp_format_agent.cpp",
  "$image_subsystem/plugins/common/libs/image/formatagentplugin/src/webp_format_agent.cpp",

  # bmp
  "$image_subsystem/plugins/common/libs/image/libbmpplugin/src/bmp_decoder.cpp",
  "$image_subsystem/plugins/common/libs/image/libbmpplugin/src/bmp_stream.cpp",

  # gif
  "$image_subsystem/plugins/common/libs/image/libgifplugin/src/gif_decoder.cpp",

  # jpeg
  "${image_subsystem}/plugins/common/libs/image/libjpegplugin/src/exif_maker_note.cpp",
  "$image_subsystem/plugins/common/libs/image/libjpegplugin/src/exif_info.cpp",
  "$image_subsystem/plugins/common/libs/image/libjpegplugin/src/icc_profile_info.cpp",
  "$image_subsystem/plugins/common/libs/image/libjpegplugin/src/jpeg_decoder.cpp",
  "$image_subsystem/plugins/common/libs/image/libjpegplugin/src/jpeg_encoder.cpp",
  "$image_subsystem/plugins/common/libs/image/libjpegplugin/src/jpeg_utils.cpp",

  # png
  "$image_subsystem/plugins/common/libs/image/libpngplugin/src/nine_patch_listener.cpp",
  "$image_subsystem/plugins/common/libs/image/libpngplugin/src/png_decoder.cpp",
  "$image_subsystem/plugins/common/libs/image/libpngplugin/src/png_ninepatch_res.cpp",

  # raw
  "$image_subsystem/plugins/common/libs/image/librawplugin/src/raw_decoder.cpp",
  "$image_subsystem/plugins/common/libs/image/librawplugin/src/raw_stream.cpp",

  # svg
  "$image_subsystem/plugins/common/libs/image/libsvgplugin/src/svg_decoder.cpp",
  "$image_subsystem/plugins/common/libs/image/libwebpplugin/src/webp_decoder.cpp",
  "$image_subsystem/plugins/common/libs/image/libwebpplugin/src/webp_encoder.cpp",
]

# image_native: not support
image_native_ios_sources -= [
  "$image_subsystem/frameworks/innerkitsimpl/common/src/pixel_map_parcel.cpp",
  "$image_subsystem/frameworks/innerkitsimpl/creator/src/image_creator.cpp",
  "$image_subsystem/frameworks/innerkitsimpl/creator/src/image_creator_manager.cpp",
  "$image_subsystem/frameworks/innerkitsimpl/receiver/src/image_receiver.cpp",
  "$image_subsystem/frameworks/innerkitsimpl/receiver/src/image_receiver_manager.cpp",
]

image_native_ios_include_dirs = [
  # manager
  "$image_subsystem/plugins/manager/include/utils",
  "$image_subsystem/plugins/manager/src/common",
  "$image_subsystem/plugins/manager/src/framework",
  "$image_subsystem/plugins/manager/src/pluginbase",
  "$image_subsystem/plugins/manager/src/thirdpartyadp/gstreamer",
  "//third_party/json/single_include/nlohmann",

  # common
  "//foundation/multimedia/utils/include",
  "$image_subsystem/interfaces/innerkits/include",
  "$image_subsystem/plugins/manager/include",
  "$image_subsystem/plugins/manager/include/image",
  "$image_subsystem/plugins/manager/include/pluginbase",
  "$image_subsystem/plugins/common/libs/image/libjpegplugin/include",
  "$image_subsystem/frameworks/innerkitsimpl/utils/include",
  "//foundation/graphic/graphic_2d/utils/color_manager/export",
  "//third_party/flutter/skia/third_party/externals/libjpeg-turbo",
  "$skia_root/skia/include/codec",
  "$skia_root/skia",
  "$skia_root/skia/include/core",
  "$image_subsystem/frameworks/innerkitsimpl/converter/include",
  "$image_subsystem/mock/native/include/log",
  "//commonlibrary/c_utils/base/include",
  "$image_subsystem/mock/native/include/secure",
  "//base/hiviewdfx/hilog/interfaces/native/innerkits/include",
  "//third_party/flutter/skia/third_party/skcms",

  # webp
  "$image_subsystem/plugins/common/libs/image/libwebpplugin/include",
  "//third_party/flutter/skia/third_party/externals/libwebp/src",
  "$skia_root/skia/include/encode",
  "$skia_root/skia/src/ports/skia_ohos",
  "$skia_root/skia/src/ports",
  "$skia_root/skia/src/images",
  "//third_party/expat/lib",
  "$skia_root/skia/include/private",
  "//third_party/flutter/skia/third_party/externals/freetype/include/freetype",

  # bmp
  "$image_subsystem/plugins/common/libs/image/libbmpplugin/include",

  # svg
  "$image_subsystem/plugins/common/libs/image/libsvgplugin/include",

  # raw
  "$image_subsystem/frameworks/innerkitsimpl/stream/include",
  "$image_subsystem/plugins/common/libs/image/librawplugin/include",
  "//third_party/skia",

  # png
  "$image_subsystem/plugins/common/libs/image/libpngplugin/include",
  "//third_party/zlib",
  "//third_party/libpng",

  # formatagent
  "$image_subsystem/plugins/common/libs/image/formatagentplugin/include",
  "$image_subsystem/plugins/manager/include/utils",

  # gif
  "$image_subsystem/plugins/common/libs/image/libgifplugin/include",
  "//third_party/giflib",

  # jpeg
  "//third_party/flutter/skia/third_party/libjpeg-turbo",
  "//third_party/libexif",

  # image_native
  "//utils/system/safwk/native/include",
  "//foundation/ability/ability_runtime/interfaces/inner_api/runtime/include/",
  "$image_subsystem/frameworks/innerkitsimpl/receiver/include",
  "$image_subsystem/frameworks/innerkitsimpl/creator/include",
  "$image_subsystem/frameworks/innerkitsimpl/pixelconverter/include",
  "$image_subsystem/frameworks/innerkitsimpl/codec/include",
  "$image_subsystem/frameworks/innerkitsimpl/common/include",
  "$image_subsystem/frameworks/kits/js/common/include",
  "$image_subsystem/interfaces/kits/js/common/include",
  "$image_subsystem/plugins/common/libs/image/libjpegplugin",
  "$image_subsystem/interfaces/kits/native/include",
  "//utils/jni/jnikit/include",
  "//foundation/graphic/graphic_2d/interfaces/inner_api/surface",
  "//foundation/graphic/graphic_2d/interfaces/inner_api/common",
  "//foundation/graphic/graphic_2d/interfaces/kits/napi/graphic/color_manager/color_space_object_convertor",
  "//foundation/communication/ipc/interfaces/innerkits/ipc_core/include",
  "//foundation/graphic/graphic_2d/utils/buffer_handle/export",
  "//drivers/peripheral/display/interfaces/include",
  "//drivers/peripheral/base",
  "//third_party/skia/third_party/externals/libjpeg-turbo",
]

image_native_ios_deps = [
  # image_native
  "//foundation/arkui/napi:ace_napi",
  "$image_subsystem/frameworks/innerkitsimpl/pixelconverter:pixelconvertadapter_static",
  "$image_subsystem/frameworks/innerkitsimpl/utils:image_utils_static",
  "$image_subsystem/mock/native:log_mock_static",

  # jpeg
  "//third_party/flutter/build/libjpeg:ace_libjpeg",

  # png
  #"//third_party/libpng:png_static",
  # gif
  "//third_party/giflib:gif_static",
  "//third_party/libexif:exif_static",

  # raw
  "//third_party/skia/third_party/piex",
]
image_native_ios_deps += skia_skcms
image_native_ios_deps += skia_platform

image_native_ios_external_deps = [
  # common
  "c_utils:utilsbase",

  # png
  "//third_party/zlib:shared_libz",
]
