# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("jpegdec_public_config") {
  visibility = [ ":*" ]
  include_dirs =
      [ "//foundation/multimedia/image_standard/adapter/hals/jpegdec/include" ]
}

ohos_shared_library("jpegdec") {
  sources = [
    "src/vendor/huawei/hardware/jpegdec/1.0/JpegDecodeAll.cpp",
    "src/vendor/huawei/hardware/jpegdec/1.0/types.cpp",
  ]

  defines = [ "_USING_LIBCXX" ]

  include_dirs = [ "include" ]

  public_configs = [ ":jpegdec_public_config" ]

  if (is_clang) {
    cflags = [
      "-Wno-inconsistent-missing-override",
      "-Wno-thread-safety-analysis",
      "-Wno-thread-safety-attributes",
    ]
  }

  aosp_deps = [
    "shared_library:libbinder",
    "shared_library:libcutils",
    "shared_library:libhidlbase",
    "shared_library:libhidltransport",
    "shared_library:liblog",
    "shared_library:libutils",
  ]

  subsystem_name = "multimedia"
  part_name = "multimedia_image"
}
