/*
 * Copyright (C) 2023 Huawei Device Co., Ltd.
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

import("//build/ohos.gni")
import("//foundation/multimedia/image_framework/ide/image_decode_config.gni")
import("$image_subsystem/plugins/cross/image_native_android.gni")
import("$image_subsystem/plugins/cross/image_native_ios.gni")

ohos_shared_library("astc_util") {
    if (!use_clang_android) {
      sanitize = {
        cfi = true
        cfi_cross_dso = true
        debug = false
      }
    }
    inlcude_dirs = [ "//foundation/multimedia/image_framework/interface/innerkits/astc" ]
    sources = [ "//foundation/multimedia/image_framework/innerkitsimpl/common/src/astc_utils.cpp" ]
    deps = [ "//foundation/multimedia/image_framework/interface/innerkits:image_native" ]
    external_deps = [
      "graphic_2d:librender_service_client",
      "c_utils:utils",
      "hitrace:hitrace_meter",
      "hilog:libhilog,"
    ]
    subsystem_name = "multimedia"
    innerapi_tags = [ "platformsdk" ]
    part_name = "image_framework"
}